# majordome-build

./: pyproject.toml
src/majordome_build/: __init__.py
